# 3D_Character

./: .gitignore  FEATURES.md  README.md  index.html  inspect_inhibitors.sh  install_deb.sh  install_deps.sh  package-lock.json  package.json  run_appimage.sh  setup.sh  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
assets/: tray-icon.svg~
dist-electron/: main.js  preload.js
foxy-input-helper/: Cargo.toml  README.md
foxy-input-helper/src/: main.rs
scripts/: manual_release.sh  publish.sh  set_version.js  uninstall.sh
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  shared.rs  windows_input.rs
src-tauri/src/input/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/templates/: app.desktop
src/main/: ipc-handlers.ts  main.js  main.ts  preload.js  preload.ts
src/main/managers/: tray-manager.ts  window-manager.ts
src/main/services/: config-store.ts  cursor-monitor.ts  gemini.ts
src/renderer/: app.js  app.ts  constants.ts  index.html  style.css
src/renderer/data/: reactions.ts
src/renderer/modules/: character.ts  chat.ts  interactions.ts  lighting.ts  screensaver.ts  settings.ts  store.ts
src/renderer/services/: gemini.ts  history.ts  ollama.ts
